Add token refund feature and refine the implementation of file writer